<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activityHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgColorDefault"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/txtHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="6dp"
            android:text="@string/textHome"
            android:textColor="@color/txtColorDefault"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btProx"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAuthor" />

        <ImageView
            android:id="@+id/imgHome"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/ofcDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/oficina_mecanica" />

        <TextView
            android:id="@+id/txtDiscipline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:text="@string/Discipline"
            android:textColor="@color/txtColorDefault"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgHome" />

        <TextView
            android:id="@+id/txtAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/Author"
            android:textColor="@color/txtColorDefault"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDiscipline" />

        <TextView
            android:id="@+id/txtDeveloped"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="232dp"
            android:text="@string/txtDev"
            android:textColor="@color/txtColorDefault"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtHome" />

        <Button
            android:id="@+id/btProx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:text="@string/btProx"
            android:backgroundTint="@color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtDeveloped"
            app:layout_constraintStart_toEndOf="@+id/txtDeveloped"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btAnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:text="@string/btAnt"
            android:backgroundTint="@color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/btProx"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btProx" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>