<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activityHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgColorDefault"
        tools:context=".DisplayMessageActivity">

        <TextView
            android:id="@+id/txtExibir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="6dp"
            android:text="@string/textHome"
            android:textColor="@color/txtColorDefault"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/btProx"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEdit" />


        <TextView
            android:id="@+id/txtDeveloped"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="232dp"
            android:text="@string/txtDev"
            android:textColor="@color/txtColorDefault"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtExibir" />

        <Button
            android:id="@+id/btProx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:text="@string/btProx"
            android:backgroundTint="@color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtDeveloped"
            app:layout_constraintStart_toEndOf="@+id/txtDeveloped"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btAnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:text="@string/btAnt"
            android:backgroundTint="@color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/btProx"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btProx" />

        <Button
            android:id="@+id/btAnt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/black"
            android:text="@string/btAnt"
            app:layout_constraintBaseline_toBaselineOf="@+id/btProx"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/btProx" />

        <EditText
            android:id="@+id/txtEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/txtEdit"
            android:inputType="textPersonName"
            android:textColor="@color/purple_200"
            android:textColorHint="@color/purple_200"
            app:layout_constraintEnd_toStartOf="@+id/btSend"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="" />

        <Button
            android:id="@+id/btSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/enviar"
            android:onClick="sendMessage"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtEdit"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
